// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots when active 1`] = `
<BaseButton
  active={true}
  disabled={false}
  enforceA={false}
  onClick={[Function]}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N   LINK_CLASS",
    }
  }
>
  BUTTON
</BaseButton>
`;

exports[`Matches snapshots when active 2`] = `
<BaseButton
  active={true}
  disabled={false}
  enforceA={false}
  onClick={[Function]}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N   LINK_CLASS",
    }
  }
>
  BUTTON
</BaseButton>
`;

exports[`Matches snapshots when disabled 1`] = `
<BaseButton
  active={false}
  disabled={true}
  enforceA={false}
  onClick={[Function]}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N   LINK_CLASS",
    }
  }
>
  BUTTON
</BaseButton>
`;

exports[`Matches snapshots when disabled 2`] = `
<BaseButton
  active={false}
  disabled={true}
  enforceA={false}
  onClick={[Function]}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N   LINK_CLASS",
    }
  }
>
  BUTTON
</BaseButton>
`;

exports[`Matches snapshots when rendered as link 1`] = `
<BaseButton
  active={true}
  disabled={false}
  enforceA={false}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N   LINK_CLASS",
    }
  }
  to="/SOME/TEST/URL"
>
  BUTTON
</BaseButton>
`;

exports[`Matches snapshots when rendered as link 2`] = `
<BaseButton
  active={true}
  disabled={false}
  enforceA={false}
  openNewTab={false}
  replace={false}
  theme={
    Object {
      "active": "src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS",
      "ad": "src-shared-components-Button-style___ad___kh1k6A",
      "button": "src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS",
      "context": "src-shared-components-Button-style___context___27VAmK",
      "disabled": "src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS",
      "hoc": "src-shared-components-Button-style___hoc___xeK7Rp",
      "link": "src-shared-components-Button-style___link___1z748N",
    }
  }
  to="/SOME/TEST/URL"
>
  BUTTON
</BaseButton>
`;
